fix gap

--- a/src/components/ProductsTable/ProductsTable.module.css
+++ b/src/components/ProductsTable/ProductsTable.module.css
@@ -44,14 +44,14 @@
 .nameText {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 2px;
 }
 
 .nameTitle {
   font-family: 'Cairo', sans-serif;
   font-weight: 700;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 1.2;
   color: #222222;
   white-space: nowrap;
   overflow: hidden;
@@ -63,7 +63,7 @@
   font-family: 'Cairo', sans-serif;
   font-weight: 400;
   font-size: 14px;
-  line-height: 26px;
+  line-height: 1.2;
   color: #B2B3B9;
 }
 
